added handlefunctions to burger icon

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -137,6 +137,10 @@
 
 @media screen and (max-width: 768px) {
   .header {
+    padding: 0 10px;
+    &__navbar {
+      padding: 0;
+    }
     .header__list-box {
       .header__list-box__item {
         display: none;
