--- a/src/components/main-title/styles.module.scss
+++ b/src/components/main-title/styles.module.scss
@@ -1,28 +1,37 @@
-@import './../../assets/styles/light-theme.scss';
-@import './../../assets/styles/colors.scss';
+@import "./../../assets/styles/light-theme.scss";
+@import "./../../assets/styles/colors.scss";
 
 .title {
-    display: block;
-    font-size: 64px;
-    font-weight: 900;
-    letter-spacing: 4px;
-    margin-bottom: 20px;
-    text-align: center;
-    background: linear-gradient($dark-0, $dark-4); 
-    background-attachment: scroll;
-    background-clip: text; 
-    -webkit-background-clip: text; 
+  display: block;
+  font-size: 64px;
+  font-weight: 900;
+  letter-spacing: 4px;
+  margin-bottom: 20px;
+  text-align: center;
+  background: linear-gradient($dark-0, $dark-4);
+  background-attachment: scroll;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  &.title-dark {
+    background: linear-gradient($light-0, $light-4);
+    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    &.title-dark {
-        background: linear-gradient($light-0, $light-4); 
-        background-clip: text; 
-        -webkit-background-clip: text; 
-        -webkit-text-fill-color: transparent;
-    }
+  }
 }
 
 @media screen and (max-width: 951px) {
-    .title {
-        font-size: 56px;
+  .title {
+    font-size: 56px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 48px;
+    &.title-dark {
+      font-size: 48px;
     }
+  }
 }
