--- a/src/components/burger-icon/styles.module.scss
+++ b/src/components/burger-icon/styles.module.scss
@@ -37,6 +37,17 @@
       transition: transform 0.2s ease;
     }
   }
+  &.burger-mobile-wrap-light {
+    &::before {
+      background-color: #000;
+    }
+    &::after {
+      background-color: #000;
+    }
+    &:hover {
+      background-color: #e1e1e1;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
