--- a/src/components/burger-menu/styles.module.scss
+++ b/src/components/burger-menu/styles.module.scss
@@ -1,9 +1,9 @@
 .nav-menu {
   position: absolute;
-  max-width: 100vh;
+  max-width: 100%;
   width: 100%;
   max-height: 100vh;
-  min-height: 100vh;
+  min-height: calc(100vh - 50px);
   z-index: -1;
   background-color: #000;
   padding-top: 30px;
@@ -30,6 +30,10 @@
   &.nav-menu-active {
     transform: translateY(0);
     opacity: 1;
+  }
+  &.nav-menu-light {
+    background-color: #fff;
+    color: #000;
   }
 }
 
