--- a/src/pages/Experiences/Detail/styles.module.scss
+++ b/src/pages/Experiences/Detail/styles.module.scss
@@ -1,100 +1,120 @@
-
-@import './../../../assets/styles/light-theme.scss';
-@import './../../../assets/styles/colors.scss';
-
+@import "./../../../assets/styles/light-theme.scss";
+@import "./../../../assets/styles/colors.scss";
 
 .detail-wrap {
-    .title-box {
+  .title-box {
     padding: 32px 0 80px 0;
     position: relative;
-        .title-wrap{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            .title {
-                margin: 5px 0;
-                font-size: 57px;
-            }
-            .date {
-                margin: 12px 0;
-                .date-text {
-                    font-weight: 300;
-                    font-size: 16px;
-                    letter-spacing: 1px;
-                    color: $accent-text;
-                    &.date-text-dark {
-                        color: $light-2;
-                    }
-                }
-            }
-            .border {
-                max-width: 728px;
-                width: 100%;
-                height: 1px;
-                background: $border;
-                margin-top: 10px;
-                margin-bottom: 10px;
-                &.border-dark {
-                    background: $dark-2;
-                }
-            }
-            .image-wrap {
-                position: absolute;
-                top: 0;
-                right: 0;
-                height: 100%;
-                width: 50%;
-                z-index: -1;
-                img {
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    background: rgb(255,255,255);
-                    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.836594012605042) 71%, rgba(255,255,255,0.5872942927170868) 100%);
-                }
-                &.img-dark {
-                    &::before {
-                           background: linear-gradient(90deg,$dark-0 0%,$dark-0 10%,$dark-0-60 100%),no-repeat right 40%/40%;
-                    }
-                }
-                
-            }
+    .title-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .title {
+        margin: 5px 0;
+        font-size: 57px;
+      }
+      .date {
+        margin: 12px 0;
+        .date-text {
+          font-weight: 300;
+          font-size: 16px;
+          letter-spacing: 1px;
+          color: $accent-text;
+          &.date-text-dark {
+            color: $light-2;
+          }
         }
-        .chips-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 10px;
-            .skills-wrap {
-                display: flex;
-
-              .chip{
-                  margin-right: 5px;
-              }
-            }
-            &:first-child {
-             margin-bottom: 10px;
-         }
+      }
+      .border {
+        max-width: 728px;
+        width: 100%;
+        height: 1px;
+        background: $border;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        &.border-dark {
+          background: $dark-2;
         }
+      }
+      .image-wrap {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 50%;
+        z-index: -1;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background: rgb(255, 255, 255);
+          background: linear-gradient(
+            90deg,
+            rgba(255, 255, 255, 1) 0%,
+            rgba(255, 255, 255, 0.836594012605042) 71%,
+            rgba(255, 255, 255, 0.5872942927170868) 100%
+          );
+        }
+        &.img-dark {
+          &::before {
+            background: linear-gradient(
+                90deg,
+                $dark-0 0%,
+                $dark-0 10%,
+                $dark-0-60 100%
+              ),
+              no-repeat right 40%/40%;
+          }
+        }
+      }
     }
+    .chips-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-top: 10px;
+      .skills-wrap {
+        display: flex;
+
+        .chip {
+          margin-right: 5px;
+        }
+      }
+      &:first-child {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 .description-wrap {
-    padding: 30px 5px ;
-    .description {
-        letter-spacing: 1px;
-        line-height: 28px;
-    }
+  padding: 30px 5px;
+  .description {
+    font-family: "Space Mono", monospace;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 28px;
+  }
 }
 
-
+@media screen and (max-width: 768px) {
+  .detail-wrap {
+    .title-box {
+      .title-wrap {
+        .title {
+          font-size: 43px;
+        }
+      }
+    }
+  }
+}
