--- a/src/pages/Projects/Detail/styles.module.scss
+++ b/src/pages/Projects/Detail/styles.module.scss
@@ -1,143 +1,164 @@
-@import './../../../assets/styles/light-theme.scss';
-@import './../../../assets/styles/colors.scss';
+@import "./../../../assets/styles/light-theme.scss";
+@import "./../../../assets/styles/colors.scss";
 
 .detail-wrap {
-    .title-box {
+  .title-box {
     padding: 32px 0 80px 0;
-        .title-wrap{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            .title {
-                margin: 5px 0;
-                font-size: 57px;
+    .title-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .title {
+        margin: 5px 0;
+        font-size: 57px;
+      }
+      .text {
+        margin: 8px 0;
+        font-weight: 300;
+        letter-spacing: 1px;
+      }
+      .border {
+        max-width: 728px;
+        width: 100%;
+        height: 1px;
+        background: $border;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        &.border-dark {
+          background: $dark-2;
         }
-            .text {
-                margin: 8px 0;
-                font-weight: 300;
-                letter-spacing: 1px;
-            }
-            .border {
-                max-width: 728px;
-                width: 100%;
-                height: 1px;
-                background: $border;
-                margin-top: 10px;
-                margin-bottom: 10px;
-                &.border-dark {
-                background: $dark-2;
-
-                }
-            }
-            .image-wrap {
-                position: absolute;
-                top: 0;
-                right: 0;
-                height: 100%;
-                width: 50%;
-                z-index: -1;
+      }
+      .image-wrap {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 50%;
+        z-index: -1;
         overflow: hidden;
 
-                img {
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                &::before {
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    background: rgb(255,255,255);
-                    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.836594012605042) 71%, rgba(255,255,255,0.5872942927170868) 100%);
-                }
-                &.img-dark {
-                    &::before {
-                           background: linear-gradient(90deg,$dark-0 0%,$dark-0 10%,$dark-0-60 100%),no-repeat right 40%/40%;
-                    }
-                }
-                
-            }
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
-        .chips-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            .skills-wrap {
-                display: flex;
-              .chip{
-                  margin-right: 5px;
-              }
-            }
-            &:first-child {
-             margin-bottom: 10px;
-         }
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background: rgb(255, 255, 255);
+          background: linear-gradient(
+            90deg,
+            rgba(255, 255, 255, 1) 0%,
+            rgba(255, 255, 255, 0.836594012605042) 71%,
+            rgba(255, 255, 255, 0.5872942927170868) 100%
+          );
         }
+        &.img-dark {
+          &::before {
+            background: linear-gradient(
+                90deg,
+                $dark-0 0%,
+                $dark-0 10%,
+                $dark-0-60 100%
+              ),
+              no-repeat right 40%/40%;
+          }
+        }
+      }
     }
+    .chips-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .skills-wrap {
+        display: flex;
+        .chip {
+          margin-right: 5px;
+        }
+      }
+      &:first-child {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 
 .description-wrap {
-    padding: 30px 5px ;
-    border-bottom: 1px solid $border;
-    .description {
-        letter-spacing: 1px;
-        line-height: 28px;
-    }
-    &.description-wrap-dark {
+  padding: 30px 5px;
+  border-bottom: 1px solid $border;
+  .description {
+    font-family: "Space Mono", monospace;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 28px;
+  }
+  &.description-wrap-dark {
     border-bottom: 1px solid $dark-2;
-
-    }
+  }
 }
 
 .screenshot-images-wrap {
-    display: grid;
-    grid-template-columns: repeat(4,minmax(0,1fr));
-    gap: 20px;
-    padding: 0 10px;
-    margin-top: 40px;
-    .screenshot-container {
-       border-top-left-radius: 10px;
-       border-top-right-radius: 10px;
-       overflow: hidden;
-        width: 230px;
-        height: 129px;
-        flex-wrap: wrap;
-        // margin-right: 30px;
-    }
-    .screenshot {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 20px;
+  padding: 0 10px;
+  margin-top: 40px;
+  .screenshot-container {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: hidden;
+    width: 230px;
+    height: 129px;
+    flex-wrap: wrap;
+    // margin-right: 30px;
+  }
+  .screenshot {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .screenshots-wrap {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    .img {
-        width: 56px;
-        height: 56px;
-        object-fit: contain;
-    }
-   
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  .img {
+    width: 56px;
+    height: 56px;
+    object-fit: contain;
+  }
 }
 .screenshots-text {
-    .text {
-        color: $border;
-        font-weight: 300;
-        margin-top: 10px;
-        letter-spacing: 1px;
+  .text {
+    color: $border;
+    font-weight: 300;
+    margin-top: 10px;
+    letter-spacing: 1px;
     &.text-dark {
-        color: $dark-2;
+      color: $dark-2;
     }
-    }
+  }
 }
 
+@media screen and (max-width: 768px) {
+  .detail-wrap {
+    .title-box {
+      .title-wrap {
+        .title {
+          margin: 5px 0;
+          font-size: 43px;
+        }
+      }
+    }
+  }
+}
