--- a/src/pages/Projects/project-card/styles.module.scss
+++ b/src/pages/Projects/project-card/styles.module.scss
@@ -88,3 +88,10 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .project-card-wrap {
+    max-width: 100%;
+    width: 100%;
+  }
+}
