--- a/src/components/app/styles.module.scss
+++ b/src/components/app/styles.module.scss
@@ -1,15 +1,20 @@
-@import './../../assets/styles/light-theme.scss';
+@import "./../../assets/styles/light-theme.scss";
 
 .header {
   border-bottom: 1px solid $border;
- 
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #fff;
 }
+
 .header-dark {
   border-bottom: 1px solid $dark-1;
-  }
+  background-color: #000;
+}
 
 .main-layout-dark-bg {
-  color: #E1E1E1;
+  color: #e1e1e1;
 }
 
 .page-indent {
