--- a/src/components/burger-menu/styles.module.scss
+++ b/src/components/burger-menu/styles.module.scss
@@ -3,7 +3,7 @@
   max-width: 100%;
   width: 100%;
   max-height: 100vh;
-  min-height: calc(100vh - 50px);
+  min-height: 100vh;
   z-index: -1;
   background-color: #000;
   padding-top: 30px;
