finished mobile adaptive

--- a/src/components/box-title/styles.module.scss
+++ b/src/components/box-title/styles.module.scss
@@ -1,10 +1,12 @@
-@import './../../assets/styles/light-theme.scss';
-@import './../../assets/styles/colors.scss';
+@import "./../../assets/styles/light-theme.scss";
+@import "./../../assets/styles/colors.scss";
 
 .title-wrap {
-    border-bottom: 1px solid $border;
-    position: relative;
-    &.title-wrap-dark {
-        border-bottom: 1px solid $dark-2;
-    }
+  border-bottom: 1px solid $border;
+  position: relative;
+  &.title-wrap-dark {
+    border-bottom: 1px solid $dark-2;
+  }
 }
+
+
