--- a/src/pages/Experiences/Detail/styles.module.scss
+++ b/src/pages/Experiences/Detail/styles.module.scss
@@ -118,3 +118,15 @@
     }
   }
 }
+
+@media screen and (max-width: 680px) {
+  .detail-wrap {
+    .title-box {
+      .title-wrap {
+        .title {
+          font-size: 36px;
+        }
+      }
+    }
+  }
+}
