--- a/src/pages/Skills/Detail/styles.module.scss
+++ b/src/pages/Skills/Detail/styles.module.scss
@@ -40,3 +40,14 @@
     gap: 5px;
   }
 }
+
+@media screen and (max-width: 640px) {
+  .detail-page-wrap {
+    .promo-block {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 200px;
+    }
+  }
+}
