--- a/src/components/main-title/styles.module.scss
+++ b/src/components/main-title/styles.module.scss
@@ -35,3 +35,12 @@
     }
   }
 }
+
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 40px;
+    &.title-dark {
+      font-size: 40px;
+    }
+  }
+}
